--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Alan Mooiman</title>
-        <meta name="description" content="Alan Mooiman is a front end developer in NYC">
+        <meta name="description" content="Alan Mooiman is a web engineering manager in NYC">
         <meta name="viewport" content="width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -31,7 +31,7 @@
                <li><a href="/resume" class="resume">Resume</a>
                <li><a class="twitter" href="https://twitter.com/alanmoo" rel="me">Twitter</a>
                <li><a class="github" href="https://github.com/alanmoo" rel="me">GitHub</a>
-               <!-- <li><a class="linkedin" href="http://linkedin.com/in/amooiman">LinkedIn</a> -->
+               <li><a class="linkedin" href="http://linkedin.com/in/amooiman">LinkedIn</a>
            </ul>    
        </div>
 
