--- a/resume/index.html
+++ b/resume/index.html
@@ -41,6 +41,9 @@
 					<li>Led team to significantly reduce challenges in reviewing/testing changes, improve deployment process, and modularize front-end</li>
 					<li>Listened to the pulse of the organization to understand and direct feature development, meeting the needs of multiple stakeholders simultaneously</li>
 				</ul>
+				{% comment %} <h3>Mozilla Donations platform</h3>
+				<ul> {% endcomment %}
+				</ul>
 				<h3>E*Trade Portfolios Prototype</h3>
 				<ul>
 					<li>Leveraged MongoDB, Express, NodeJS, and AngularJS to build a highly functional prototype for the new heart of the E*TRADE web platform</li>
@@ -56,7 +59,7 @@
 				<div class="organization"><a href="https://foundation.mozilla.org">Mozilla Foundation</a></div>
 				<div class="organization_dates">May 2017 - Present</div>
 				<p>
-					I lead a team of 6 (+ 1 indirect report) web and devops engineers across North America and Germany. We build projects to support Mozilla's mission of improving internet health through shaping the global conversation, connecting leaders, and rallying citizens. For this, I work closely with the design manager and digital director to improve the Foundation's main site at foundation.mozilla.org. The design and engineering teams also function as a service organization internally, helping address the digital needs of other teams within the organization. I work closely with the leaders of those teams to identify the best way for us to address their needs while pushing forward on our team's internal roadmap. This happens by asking not just "what are you trying to do?" but "what problem are you trying to solve?", a subtle but important distinction. I also work with my team to identify the most challenging process points and figure out how to reduce friction for them, while keeping us moving forward.
+					I lead a team of 6 web and devops engineers across North America and Germany. We build projects to support Mozilla's mission of improving internet health through shaping the global conversation, connecting leaders, and rallying citizens. For this, I work closely with the design manager, product manager, and digital director to improve the Foundation's main site at foundation.mozilla.org. The design and engineering teams also function as a service organization internally, helping address the digital needs of other teams within the organization. I partner with the leaders of those teams to identify the best way for us to address their needs while pushing forward on our team's internal roadmap. This happens by asking not just "what are you trying to do?" but "what problem are you trying to solve?", a subtle but important distinction. I also work with my team to identify workflow challenges, improve their skills, and foster best software development practices while keeping us moving forward.
 				</p>
 			</div>
 			<div class="resume_item">
