ugh wrong comments

--- a/resume/index.html
+++ b/resume/index.html
@@ -41,8 +41,8 @@
 					<li>Led team to significantly reduce challenges in reviewing/testing changes, improve deployment process, and modularize front-end</li>
 					<li>Listened to the pulse of the organization to understand and direct feature development, meeting the needs of multiple stakeholders simultaneously</li>
 				</ul>
-				{% comment %} <h3>Mozilla Donations platform</h3>
-				<ul> {% endcomment %}
+				<!---- <h3>Mozilla Donations platform</h3>
+				<ul>-->
 				</ul>
 				<h3>E*Trade Portfolios Prototype</h3>
 				<ul>
