--- a/resume/index.html
+++ b/resume/index.html
@@ -57,7 +57,7 @@
 					<li ><span id="industryTime">7+ years</span> of industry experience</li>
 					<li>Previously: front-end developer comfortable with back-end work</li>
 					<li>Experienced in cross-functional engineering leadership</li>
-					<li>Focused on solving problems, not simply addressing symptoms</li>
+					<li>Focused on solving problems over simply addressing symptoms</li>
 					<li>Empathic communicator</li>
 					<li>Comfortable playing many roles</li>
 					<li>Familiar with Mac/iOS development</li>
