--- a/resume/index.html
+++ b/resume/index.html
@@ -69,9 +69,16 @@
 			<section>
 			<h2>Work Experience</h2>
 			<div class="resume_item">
+				<h3 class="job_title">Lead Web Developer</h3>
+				<div class="organization"><a href="https://squarefoot.com">Squarefoot</a></div>
+				<div class="organization_dates">February 2020 - Present</div>
+				<p>
+				</p>
+			</div>
+			<div class="resume_item">
 				<h3 class="job_title">Engineering Manager</h3>
 				<div class="organization"><a href="https://foundation.mozilla.org">Mozilla Foundation</a></div>
-				<div class="organization_dates">May 2017 - Present</div>
+				<div class="organization_dates">May 2017 - January 2020</div>
 				<p>
 					I lead a team of 6 web and devops engineers across North America and Germany. We build projects to support Mozilla's mission of improving internet health. For this, I work closely with the design manager, product manager, and digital director to improve the Foundation's main site at foundation.mozilla.org. The design and engineering teams also function as a service organization internally, helping address the digital needs of other teams within the organization. I partner with the leaders of those teams to identify the best way for us to address their needs while pushing forward on our team's internal road map. This happens by asking not just "what are you trying to do?" but "what problem are you trying to solve?", a subtle but important distinction. I also work with my team to identify workflow challenges, improve their skills, and foster best software development practices while keeping us moving forward. Finally, as both the ranking engineer and most senior technical manager, I ensure organizational technology decisions are made prudently with an eye on long term impact and cost.
 				</p>
