Add SquareFoot experience to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -73,6 +73,13 @@
 				<div class="organization"><a href="https://squarefoot.com">SquareFoot</a></div>
 				<div class="organization_dates">February 2020 - Present</div>
 				<p>
+					SquareFoot is a commercial real estate brokerage, focused on client acquisition via our web platform. I lead the team of 4 engineers resposible for the front-end of this platform, which is used for showing listings to potential clients, onboarding them into our sales flow, and then facilitating the broker/client search experience. It's a React application run on a Node.js server which connects to a GraphQL API. I work closely with the product manager, backend/infrastructure manager, head of engineering, and the design team to deliver new features to the platform while reducing technical debt that accumulated as the platform was first being shaped.
+				</p>
+				<p>Some significant accomplishments include:
+					<ul>
+						<li>I led work on the quarterly key result of improving mobile Lighthouse scores for key SEO pages from in the 20's to 70's (with more to come pending larger projects)</li>
+						<li>I led the upgrade on the web application, which had core dependencies many years out of date (e.g. Node.js v6 when v13 was the most recent)</li>
+					</ul>
 				</p>
 			</div>
 			<div class="resume_item">
