--- a/resume/index.html
+++ b/resume/index.html
@@ -42,14 +42,14 @@
 		<div class="show-print"><small>Printed/PDF'ed from <a href="http://alanmooiman.com/resume">alanmooiman.com/resume</a></small></div>
 		<header>
 			<h1>Alan Mooiman</h1>
-			<h2>Web Engineering Manager</h2>
+			<h2>Engineering Manager</h2>
 		</header> <!-- .name_title -->
 		<div class="contact_info">
 			<a class="email" href="mailto:alan@alanmooiman.com?subject=I want to pay you">alan@alanmooiman.com</a>
 		</div> <!-- .contact_info -->
 		<div class="content">
-			<h3>Objective</h3>
-			<p>To lead an engaged, productive, communicative team that outputs high quality projects and works together to help one another improve their skills while building the future.</p>
+			<!-- <h3>Objective</h3>
+			<p>To lead an engaged, productive, communicative team that outputs high quality projects and works together to help one another improve their skills while building the future.</p> -->
 			<section>
 				<h3>Skills/Experience</h3>
 				<ul class="skills">
@@ -87,7 +87,7 @@
 				<div class="organization"><a href="https://foundation.mozilla.org">Mozilla Foundation</a></div>
 				<div class="organization_dates">May 2017 - January 2020</div>
 				<p>
-					I lead a team of 6 web and devops engineers across North America and Germany. We build projects to support Mozilla's mission of improving internet health. For this, I work closely with the design manager, product manager, and digital director to improve the Foundation's main site at foundation.mozilla.org. The design and engineering teams also function as a service organization internally, helping address the digital needs of other teams within the organization. I partner with the leaders of those teams to identify the best way for us to address their needs while pushing forward on our team's internal road map. This happens by asking not just "what are you trying to do?" but "what problem are you trying to solve?", a subtle but important distinction. I also work with my team to identify workflow challenges, improve their skills, and foster best software development practices while keeping us moving forward. Finally, as both the ranking engineer and most senior technical manager, I ensure organizational technology decisions are made prudently with an eye on long term impact and cost.
+					I led a team of 6 web and devops engineers across North America and Germany. We built projects to support Mozilla's mission of improving internet health. For this, I worked closely with the design manager, product manager, and digital director to improve the Foundation's main site at foundation.mozilla.org. The design and engineering teams also functioned as a service organization internally, helping address the digital needs of other teams within the organization. I partnered with the leaders of those teams to identify the best way for us to address their needs while pushing forward on our team's internal road map. This happened by asking not just "what are you trying to do?" but "what problem are you trying to solve?", a subtle but important distinction. I also worked with my team to identify workflow challenges, improve their skills, and foster best software development practices while keeping us moving forward. Finally, as both the engineering lead and most senior technical manager in the org, I ensured organizational technology decisions were made prudently with an eye on long term impact and cost.
 				</p>
 			</div>
 			<div class="resume_item">
@@ -102,13 +102,16 @@
 				<h3 class="job_title">Front End Prototype Developer</h3>
 				<div class="organization">E*TRADE Financial - <span class="location">New York City</span></div>
 				<div class="organization_dates">October 2013 - August 2015</div>
-				<ul>
-					<li>Develop prototypes for the customer web app based on static comps</li>
-					<li>Experiment with new web technologies to implement within the application</li>
-					<li>Coordinate with the development team in California so that our prototypes are useful to them during production</li>
-					<li>Develop framework of various components to be integrated into a style guide for agencies and developers to reference.</li>
-					<li>Collaborate with the iOS development and design teams to quickly integrate new technologies</li>
-				</ul>
+				<p>
+					In this role I:
+					<ul>
+						<li>Developed prototypes for the customer web app based on static comps</li>
+						<!-- <li>Experimented with new web technologies to implement within the application</li> -->
+						<li>Coordinate with the development team in California so that our prototypes are useful to them during production</li>
+						<!-- <li>Developed a framework of various components to be integrated into a style guide for agencies and developers to reference.</li> -->
+						<li>Collaborate with the iOS development and design teams to quickly integrate new technologies</li>
+					</ul>
+				</p>
 			</div>
 			<div class="resume_item">
 				<h3 class="job_title">UI Designer/Developer</h3>
@@ -117,9 +120,9 @@
 				<ul>
 					<!-- <li>Develop responsive Drupal theme for new base distribution, including a new responsive navigation pattern</li> -->
 					<!-- <li>Add front end functionality to existing internal applications</li> -->
-					<li>Play a strong role in the design process with guidance from art director</li>
-					<li>Implement designs by others in code to a high level of detail</li>
-					<li>Skin various internal and 3rd party web applications</li>
+					<li>Played a strong role in the design process with guidance from art director</li>
+					<li>Implemented designs by others in code to a high level of detail</li>
+					<!-- <li>Skin various internal and 3rd party web applications</li> -->
 					<!-- <li>Develop coding standards for the web design team</li> -->
 					<li>Write CSS with support back to IE7 and Firefox 3.6</li>
 					<!-- <li>Comment code so that future developers understand it</li> -->
@@ -208,10 +211,11 @@
 
 			<h2>References</h2>
 			<ul>
+				<li><a href="https://www.linkedin.com/in/vickeryj/">Joshua Vickery</a>, Principal Engineer, Namely (formerly CTO, SquareFoot)</li>
 				<li><a href="https://www.linkedin.com/in/jessevondoom/">Jesse VonDoom</a>, Former Digital Director, Mozilla Foundation</li>
 				<li><a href="https://www.linkedin.com/in/simonwex/">Simon Wex</a>, Former Director of Software, Mozilla Foundation</li>
 				<li><a href="https://www.linkedin.com/in/arnaud-jammaers-74a547/">Arnaud Jammaers</a>, Creative Director, E*Trade Financial (now at Mastercard)</li>
-				<li><a href="https://www.linkedin.com/in/remydwd/">Dan Dickinson</a>, Associate Director of Web Communications, Weill Cornell Medical College</li>
+				<!-- <li><a href="https://www.linkedin.com/in/remydwd/">Dan Dickinson</a>, Associate Director of Web Communications, Weill Cornell Medical College</li> -->
 				<!-- <li>Contact information available upon <a href="mailto:alan@alanmooiman.com?subject=References?">request</a></li> -->
 			</ul>
 		</div> <!-- .content -->
