Add tech stack to skills

--- a/resume/index.html
+++ b/resume/index.html
@@ -58,12 +58,12 @@
 					<li>Previously: front-end developer comfortable with back-end work</li>
 					<li>Experienced in cross-functional engineering leadership</li>
 					<li>Focused on solving problems over simply addressing symptoms</li>
-					<li>Empathic communicator</li>
 					<li>Comfortable playing many roles</li>
-					<li>Continually experimenting to improve team process</li>
+					<li>Continually experiments to improve team process</li>
 					<!-- <li>Familiar with Mac/iOS development</li> -->
 					<!-- <li><em>Firm believer in progressive enhancement and building modular code</em></li> -->
 					<li>Design background</li>
+					<li>React, GraphQL, Jest, NodeJS, CSS, etc.</li>
 				</ul>
 			</section>
 			<section>
