--- a/resume/index.html
+++ b/resume/index.html
@@ -63,7 +63,7 @@
 					<!-- <li>Familiar with Mac/iOS development</li> -->
 					<!-- <li><em>Firm believer in progressive enhancement and building modular code</em></li> -->
 					<li>Design background</li>
-					<li>React, GraphQL, Jest, NodeJS, CSS, etc.</li>
+					<li>React, GraphQL, Jest, NodeJS, CSS, Webpack, Docker, Travis, etc.</li>
 				</ul>
 			</section>
 			<section>
