Clean up old resume items, add Zenhub migration

--- a/resume/index.html
+++ b/resume/index.html
@@ -79,6 +79,7 @@
 					<ul>
 						<li>I led work on the quarterly key result of improving mobile Lighthouse scores for key SEO pages from in the 20's to 70's (with more to come pending larger projects)</li>
 						<li>I led the upgrade on the web application, which had core dependencies many years out of date (e.g. Node.js v6 when v13 was the most recent)</li>
+						<li>I spearheaded a transition from Pivotal Tracker to Zenhub for project planning, in order to better support asynchronous communications for a distributed team</li>
 					</ul>
 				</p>
 			</div>
@@ -94,24 +95,24 @@
 				<h3 class="job_title">Front End Developer</h3>
 				<div class="organization"><a href="https://foundation.mozilla.org">Mozilla Foundation</a></div>
 				<div class="organization_dates">September 2015 - May 2017</div>
-				<p>
+				<!-- <p>
 					Upon joining the team, I started working on the existing Webmaker Android app, a web-based app in a native wrapper that existed to empower users to create content on the web, instead of just consuming it. I also helped to create a UI framework for use across our web properties, and built out/enhanced a number of other sites like science.mozilla.org, foundation.mozilla.org, and the initial back-end work for mozillapulse.org as I learned Django.
-				</p>
+				</p> -->
 			</div>
 			<div class="resume_item">
 				<h3 class="job_title">Front End Prototype Developer</h3>
 				<div class="organization">E*TRADE Financial - <span class="location">New York City</span></div>
 				<div class="organization_dates">October 2013 - August 2015</div>
-				<p>
+				<!-- <p>
 					In this role I:
 					<ul>
 						<li>Developed prototypes for the customer web app based on static comps</li>
-						<!-- <li>Experimented with new web technologies to implement within the application</li> -->
-						<li>Coordinate with the development team in California so that our prototypes are useful to them during production</li>
-						<!-- <li>Developed a framework of various components to be integrated into a style guide for agencies and developers to reference.</li> -->
-						<li>Collaborate with the iOS development and design teams to quickly integrate new technologies</li>
+						<li>Experimented with new web technologies to implement within the application</li>
+						<li>Coordinated with the development team in California so that our prototypes were useful to them during production</li>
+						<li>Developed a framework of various components to be integrated into a style guide for agencies and developers to reference.</li>
+						<li>Collaborated with the iOS development and design teams to quickly integrate new technologies</li>
 					</ul>
-				</p>
+				</p> -->
 			</div>
 			<div class="resume_item">
 				<h3 class="job_title">UI Designer/Developer</h3>
@@ -119,12 +120,12 @@
 				<div class="organization_dates">February 2012 - October 2013</div>
 				<ul>
 					<!-- <li>Develop responsive Drupal theme for new base distribution, including a new responsive navigation pattern</li> -->
-					<!-- <li>Add front end functionality to existing internal applications</li> -->
+					<!-- <li>Add front end functionality to existing internal applications</li>
 					<li>Played a strong role in the design process with guidance from art director</li>
 					<li>Implemented designs by others in code to a high level of detail</li>
 					<!-- <li>Skin various internal and 3rd party web applications</li> -->
-					<!-- <li>Develop coding standards for the web design team</li> -->
-					<li>Write CSS with support back to IE7 and Firefox 3.6</li>
+					<!-- <li>Develop coding standards for the web design team</li>
+					<li>Wrote CSS with support back to IE7 and Firefox 3.6</li>
 					<!-- <li>Comment code so that future developers understand it</li> -->
 				</ul>
 			</div>
