--- a/resume/index.html
+++ b/resume/index.html
@@ -69,7 +69,7 @@
 			<section>
 			<h2>Work Experience</h2>
 			<div class="resume_item">
-				<h3 class="job_title">Engineering Lead</h3>
+				<h3 class="job_title">Web Engineering Manager</h3>
 				<div class="organization"><a href="https://squarefoot.com">SquareFoot</a></div>
 				<div class="organization_dates">February 2020 - Present</div>
 				<p>
