Keep print to 2 pages

--- a/resume/index.html
+++ b/resume/index.html
@@ -178,7 +178,7 @@
 						<li>Parlay successful implementation into utilization of the platform for rapid build and deployment of <a href="https://mozillafestival.org">mozillafestival.org</a></li>
 					</ul>
 				</div>
-				<div class="significant_project">
+				<div class="significant_project hide-print">
 					<h3>E*Trade Portfolios Prototype</h3>
 					<ul>
 						<li>Leveraged MongoDB, Express, NodeJS, and AngularJS to build a highly functional prototype for the new heart of the E*TRADE web platform</li>
